@@ -67,9 +67,16 @@ dialog_response (ConnectDialog *dialog, gint response, gpointer data)
 
 		select = gtk_tree_view_get_selection (GTK_TREE_VIEW (dialog->server_list));
 		if (gtk_tree_selection_get_selected (select, &model, &iter)) {
+			session *s;
+			gboolean connected;
+
+			s = navigation_tree_get_selected_session(&connected);
+			if (connected)
+				s = NULL;
+
 			gtk_tree_model_get (model, &iter, 0, &network, -1);
 			if (!navigation_tree_server_is_connected (gui.server_tree, network))
-				servlist_connect_by_netname (NULL, network, TRUE);
+				servlist_connect_by_netname (s, network, TRUE);
 			g_free (network);
 			gtk_widget_destroy (GTK_WIDGET (dialog));
 		}
